Switched to general 3 ver

--- a/selenium-hub.yaml
+++ b/selenium-hub.yaml
@@ -60,7 +60,7 @@ objects:
             value: ${GRID_MAX_SESSION}
           - name: GRID_UNREGISTER_IF_STILL_DOWN_AFTER
             value: ${GRID_UNREGISTER_IF_STILL_DOWN_AFTER}
-          image: selenium/hub
+          image: selenium/hub:3
           name: master
           ports:
           - containerPort: 4444
